WIP use hash for theme JS files